# NKR202_DramaRadar

./: .dockerignore  .env.example  .gitignore  Dockerfile  FILEMAP.md  docker-compose.yml  init_env.py  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
dashboard/: Note.md  app.py
db/: database.py  schema.sql  shared_tables.py
docs/: diagrams.drawio  map.md
docs/01_Project/: 001-PRD.md
docs/02_Architecture/: 002-Product Architecture.md  003-Domain Model.md
docs/03_Database/: 004-Database Design.md
docs/research/: R001-Apify API (Google Maps Extractor).md  R001-Apify API(Google Maps Extractor).md  R002-Apify API (Google Maps Reviews Scraper).md  R003-Gemini API.md
domains/ai_analysis/: client.py  config.py  db_handler.py  etl.py  models.py
domains/review/: client.py  models.py  review1.py
domains/store/: Note.md  apify_client.py  client.py  config.py  dag.py  db_handler.py  etl.py  models.py  pipeline.py  to_sql.py
domains/store/seed/: dataset_google-maps-extractor_2026-07-10_16-22-41-833.json  dataset_google-maps-extractor_2026-07-10_16-38-03-368.json  dataset_google-maps-extractor_2026-07-13_08-46-10-065.json
domains/store/tests/: test_pipeline.py
shared/: config.py
